eod delegate not working

--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -260,7 +260,7 @@
         <!--RootVC-->
         <scene sceneID="iHF-jh-dFf">
             <objects>
-                <viewController id="SzQ-Yz-9sC" customClass="RERootVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RERootVC" id="SzQ-Yz-9sC" customClass="RERootVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sKA-UH-95n"/>
                         <viewControllerLayoutGuide type="bottom" id="DX8-tO-faL"/>
@@ -310,7 +310,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZAD-tW-E52" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1571.5" y="-165.5"/>
+            <point key="canvasLocation" x="-15.5" y="-637.5"/>
         </scene>
         <!--HomeVC-->
         <scene sceneID="ahk-fo-gYG">
