added MPMediaItemCollection to settings

--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -147,6 +147,18 @@
                     <view key="view" contentMode="scaleToFill" id="WLG-js-yGn" userLabel="superView">
                         <rect key="frame" x="0.0" y="64" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qW-Ai-qnV">
+                                <rect key="frame" x="94" y="176" width="186" height="64"/>
+                                <color key="backgroundColor" red="0.39956825657894735" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Choose Alarm Song">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="chooseSong:" destination="DPW-gx-d9Z" eventType="touchUpInside" id="tAf-Gh-XBe"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="jTQ-6M-pmQ">
@@ -161,7 +173,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bK3-Za-lWq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-249" y="-999"/>
+            <point key="canvasLocation" x="-249.5" y="-999.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="J86-Nw-xQr">
@@ -273,8 +285,8 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="fadeMenuView" value="YES"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="parallaxEnabled" value="NO"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="bouncesHorizontally" value="YES"/>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="parallaxEnabled" value="YES"/>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="bouncesHorizontally" value="NO"/>
                     </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CXU-Hx-QMK" userLabel="First Responder" sceneMemberID="firstResponder"/>
