--- a/Shnoozle/Base.lproj/Main.storyboard
+++ b/Shnoozle/Base.lproj/Main.storyboard
@@ -148,28 +148,43 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qW-Ai-qnV">
-                                <rect key="frame" x="94" y="176" width="186" height="64"/>
-                                <color key="backgroundColor" red="0.39956825657894735" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Choose Alarm Song">
+                            <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MenuBackground.png" translatesAutoresizingMaskIntoConstraints="NO" id="LvW-4R-4RJ" userLabel="bg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Song" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uz5-jv-Xdn" userLabel="title">
+                                <rect key="frame" x="16" y="90" width="172" height="50"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="30"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iDd-rT-ARK" userLabel="pickerButton">
+                                <rect key="frame" x="299" y="132" width="87" height="32"/>
+                                <state key="normal" image="alarm.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="chooseSong:" destination="DPW-gx-d9Z" eventType="touchUpInside" id="tAf-Gh-XBe"/>
+                                    <action selector="pickerTapped:" destination="DPW-gx-d9Z" eventType="touchUpInside" id="T9u-yh-PtZ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SongTitle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nA-Va-EPc">
-                                <rect key="frame" x="0.0" y="94" width="375" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="seT-bd-VyA" userLabel="artistName">
+                                <rect key="frame" x="16" y="162" width="301" height="19"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter-Light" family="American Typewriter" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hiu-Y4-fDA" userLabel="songName">
+                                <rect key="frame" x="16" y="132" width="301" height="34"/>
+                                <fontDescription key="fontDescription" name="AmericanTypewriter-Light" family="American Typewriter" pointSize="19"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.31650904605263158" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="4nA-Va-EPc" secondAttribute="trailing" id="JA9-Vx-G5B"/>
-                            <constraint firstItem="4nA-Va-EPc" firstAttribute="leading" secondItem="WLG-js-yGn" secondAttribute="leading" id="Tws-G8-5cz"/>
-                            <constraint firstItem="4nA-Va-EPc" firstAttribute="top" secondItem="UTs-wK-HeZ" secondAttribute="bottom" constant="30" id="dEy-fF-6SF"/>
+                            <constraint firstAttribute="bottom" secondItem="LvW-4R-4RJ" secondAttribute="bottom" id="9Xg-bt-VOD"/>
+                            <constraint firstItem="LvW-4R-4RJ" firstAttribute="top" secondItem="WLG-js-yGn" secondAttribute="top" id="F1z-DN-fof"/>
+                            <constraint firstAttribute="trailing" secondItem="LvW-4R-4RJ" secondAttribute="trailing" id="sA1-BF-Uq6"/>
+                            <constraint firstItem="LvW-4R-4RJ" firstAttribute="leading" secondItem="WLG-js-yGn" secondAttribute="leading" id="yp4-iW-j3j"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="jTQ-6M-pmQ">
@@ -182,12 +197,13 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="songTitleLabel" destination="4nA-Va-EPc" id="s1B-zy-Xar"/>
+                        <outlet property="songArtistLabel" destination="seT-bd-VyA" id="AjZ-Qq-kQx"/>
+                        <outlet property="songTitleLabel" destination="hiu-Y4-fDA" id="ZcO-ft-wbN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bK3-Za-lWq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-249.5" y="-999.5"/>
+            <point key="canvasLocation" x="-378.5" y="-1226.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="J86-Nw-xQr">
@@ -663,6 +679,7 @@
     <resources>
         <image name="MenuBackground.png" width="520" height="768"/>
         <image name="Stars.png" width="320" height="568"/>
+        <image name="alarm.png" width="32" height="32"/>
         <image name="fb.png" width="32" height="32"/>
         <image name="menu.png" width="16" height="16"/>
         <image name="mic.png" width="256" height="256"/>
